--- a/static/css/carreira.css
+++ b/static/css/carreira.css
@@ -6,10 +6,13 @@
 }
 
 /* Estilo geral */
-body {
+html, body {
     margin: 0;
     overflow-x: hidden; /* Evita barra de rolagem horizontal */
     font-family: Arial, sans-serif;
+    height: 100%; /* Garante que o corpo ocupe toda a altura da viewport */
+    display: flex;
+    flex-direction: column; /* Define a direção do layout para coluna */
 }
 
 /* Cabeçalho */
@@ -111,6 +114,7 @@ body {
 .main-content {
     margin-left: 220px;
     padding: 20px;
+    flex: 1; /* Faz com que o conteúdo principal ocupe o espaço disponível */
 }
 
 .search-panel {
@@ -173,4 +177,5 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
+    margin-top: auto; /* Permite que o footer fique no final do conteúdo */
 }
