--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,13 +79,13 @@ body {
 
   /* Footer */
 
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
+  footer {
+    text-align: center;
+    background-color: #003f88;
+    color: #fff;
+    padding: 10px 0;
+    margin-top: auto; /* Permite que o footer fique no final do conteúdo */
+    }
 
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
