--- a/static/css/style_esquadrilha.css
+++ b/static/css/style_esquadrilha.css
@@ -203,3 +203,18 @@ li.active {
     max-width: 1200px; /* Largura máxima opcional */
     text-align: center; /* Opcional: alinha o texto ou elementos dentro */
 }
+
+.content-text {
+    flex: 1; /* Faz o texto ocupar o espaço restante */
+    text-align: left; /* Alinha o texto à esquerda */
+}
+
+.content-text h2 {
+    margin-bottom: 10px;
+    color: #0056a6; /* Cor opcional para o título */
+}
+
+.content-text p {
+    color: #333; /* Cor do texto */
+    line-height: 1.6; /* Espaçamento entre linhas */
+}
